--- a/indexx.html
+++ b/indexx.html
@@ -107,12 +107,13 @@
       }
 
       .containerImg::before {
+        content: "";
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: rgba(255, 255, 255, -0.3);
+        background-color: rgba(107, 67, 96, 0.3);
       }
 
       h1 {
